--- a/.gitignore
+++ b/.gitignore
@@ -10,5 +10,8 @@ Thumbs.db
 # Вспомогательные файлы
 *.log*
 node_modules/
+tmpnodejsnpm-cache/
 
 # Файлы сборки (допишите самостоятельно)
+public/bundle.js
+public/bundle.js.map
