--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "eslint": "6.1.0",
     "eslint-config-htmlacademy": "0.5.2",
     "moment": "2.26.0",
+    "moment-locales-webpack-plugin": "1.2.0",
     "stylelint-config-recommended": "^3.0.0",
     "webpack": "4.42.1",
     "webpack-cli": "3.3.11",
